[gd_scene load_steps=6 format=3 uid="uid://bx3amx8rinwo"]

[ext_resource type="Texture2D" uid="uid://0ga0vi657us1" path="res://assets/icons/items/32x32venom.png" id="1_3rqce"]
[ext_resource type="Script" uid="uid://ck43nvnbpa3f4" path="res://scenes/shop/shop_item.gd" id="1_35nb3"]
[ext_resource type="Material" uid="uid://b63ad8bo2t73d" path="res://assets/shaders/outline_material.tres" id="3_4oha2"]
[ext_resource type="Texture2D" uid="uid://8dorcsr83rfq" path="res://assets/icons/gold.png" id="3_hannv"]
[ext_resource type="Texture2D" uid="uid://dm5conpiemvp2" path="res://assets/icons/items/32x32sale_tag.png" id="3_kfj00"]

[node name="ShopItem" type="Control"]
custom_minimum_size = Vector2(32, 54)
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 54.0
script = ExtResource("1_35nb3")

[node name="SaleTag" type="TextureRect" parent="."]
layout_mode = 2
offset_top = 22.0
offset_right = 32.0
offset_bottom = 54.0
texture = ExtResource("3_kfj00")
stretch_mode = 5

[node name="ItemContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 46)
layout_mode = 0
offset_right = 32.0
offset_bottom = 46.0
theme_override_constants/separation = 3

[node name="ItemIconButton" type="TextureButton" parent="ItemContainer"]
unique_name_in_owner = true
material = ExtResource("3_4oha2")
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("1_3rqce")
texture_disabled = ExtResource("1_3rqce")
stretch_mode = 5

[node name="CostContainer" type="HBoxContainer" parent="ItemContainer"]
custom_minimum_size = Vector2(32, 10)
layout_mode = 2
theme_override_constants/separation = 0

[node name="GoldIcon" type="TextureRect" parent="ItemContainer/CostContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_hannv")
expand_mode = 1
stretch_mode = 5

[node name="GoldCost" type="Label" parent="ItemContainer/CostContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "999"
horizontal_alignment = 2
